--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,17 +1,30 @@
-name: my-snap-name # you probably want to 'snapcraft register <name>'
-base: core20 # the base snap is the execution environment for this snap
-version: '0.1' # just for humans, typically '1.2+git' or '1.3.2'
-summary: Single-line elevator pitch for your amazing snap # 79 char long summary
+name: prometheus-juju-backup-all-exporter
+base: core22
+adopt-info: prometheus-juju-backup-all-exporter
+summary: collects backup results and exports them as metrics
 description: |
-  This is my-snap's description. You have a paragraph or two to tell the
-  most important story about your snap. Keep it under 100 words though,
-  we live in tweetspace and your description wants to look good in the snap
-  store.
+  The prometheus-juju-backup-all-exporter is a snap for collecting backup
+  results from charm-juju-backup-all, and export those results as prometheus
+  metrics. The metrics are expected to be used with prometheus.
 
-grade: devel # must be 'stable' to release into candidate/stable channels
-confinement: devmode # use 'strict' once you have the right plugs and slots
+grade: stable
+confinement: strict
+
+apps:
+  prometheus-juju-backup-all-exporter:
+    daemon: simple
+    install-mode: disable
+    restart-condition: on-abnormal
+    command: bin/prometheus-juju-backup-all-exporter
+    plugs:
+      - network-bind
 
 parts:
-  my-part:
-    # See 'snapcraft plugins'
-    plugin: nil
+  prometheus-juju-backup-all-exporter:
+    source: .
+    plugin: python
+    python-requirements: [./requirements.txt]
+    override-build: |
+      snapcraftctl build
+      echo "Version: $(python3 setup.py --version)"
+      snapcraftctl set-version "$(python3 setup.py --version)"
