--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -8,8 +8,9 @@ on:
   pull_request:
     types: [ opened, synchronize, reopened ]
     branches: [ master, main ]
-  pull_request_review:
-    types: [ submitted ]
+    paths-ignore:
+      - '**.md'
+      - '**.rst'
 
 jobs:
   pr:
