--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -10,6 +10,10 @@ on:
       - "**.md"
       - "**.rst"
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.head_ref || github.ref }}
+  cancel-in-progress: true
+
 jobs:
   lint-unit:
     uses: canonical/bootstack-actions/.github/workflows/lint-unit.yaml@v2
@@ -27,8 +31,7 @@ jobs:
     with:
       command: make functional
       snapcraft: true
-      juju-channel: "3.1/stable"
+      juju-channel: "3.4/stable"
       nested-containers: true
       python-version: "3.10"
       timeout-minutes: 60
-      tox-version: "<4"
