- add env vars to generate coverage files

--- a/tox.ini
+++ b/tox.ini
@@ -43,6 +43,9 @@ deps =
     pytest-cov
 commands = pytest {toxinidir}/tests/unit \
     {posargs:-v --cov --cov-report=term-missing --cov-report=html --cov-report=xml}
+setenv =
+    {[testenv]setenv}
+    COVERAGE_FILE = .coverage-unit
 
 [testenv:func]
 deps =
@@ -53,3 +56,6 @@ passenv =
     TEST_*
 commands =
     pytest {toxinidir}/tests/functional {posargs:-v}
+setenv =
+    {[testenv]setenv}
+    COVERAGE_FILE = .coverage-func
